--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+# Gradle Properties
+org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+# Project Properties
+mod_version = 1.0.0
+maven_group = io.github.acodili.jg
+archives_base_name = still-clouds
 
-# Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+# Custom Properties
+## Game Version
+minecraft_version = 1.20.1
+loader_version = 0.14.21
 
-# Dependencies
-fabric_version=0.85.0+1.20.1
+## Dependency Versions
+fabric_version = 0.85.0+1.20.1
+modmenu_version = 7.1.0
