--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ loader_version = 0.14.21
 
 ## Dependency Versions
 fabric_version = 0.85.0+1.20.1
+junit_jupiter_version = 5.8.2
 modmenu_version = 7.1.0
