--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ testing {
 
             dependencies {
                 compileOnly sourceSets.client.compileClasspath
+                implementation sourceSets.client.output
                 runtimeOnly sourceSets.client.runtimeClasspath
             }
         }
