Maybe this link?
https://docs.gradle.org/current/samples/sample_incubating_jvm_multi_project_with_additional_test_types.html

--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ jar {
 
 testing {
     suites {
-        create 'unitTest', JvmTestSuite, {
+        unitTest(JvmTestSuite) {
             useJUnitJupiter project.junit_jupiter_version
 
             sources {
