--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,21 +5,5 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-      - name: Set-up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'temurin'
-      - name: Make Gradle wrapper executable
-        run: chmod +x ./gradlew
-      - name: Build
-        run: ./gradlew build
-      - name: Capture build artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: Artifacts
-          path: build/libs/
+      - name: Build and capture artifacts
+        uses: ./.github/actions/build
