--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,5 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Build and capture artifacts
         uses: ./.github/actions/build
