--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -8,4 +8,4 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build and capture artifacts
-        uses: ./.github/actions/build.yml
+        uses: ./.github/actions/build
