--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.modrinth.minotaur' version '2.8.2'
     id 'fabric-loom' version '1.3.8'
     id 'maven-publish'
 }
@@ -86,6 +87,22 @@ testing {
             }
         }
     }
+}
+
+modrinth {
+    token = System.env.MODRINTH_TOKEN
+    projectId = '6UK4qZdO'
+
+    versionName = "Still Clouds ${project.version}"
+    versionType = System.env.MODRINTH_VERSION_TYPE ?: 'release'
+    versionNumber = project.version
+
+	changelog = System.env.MODRINTH_CHANGELOG ?: ''
+	dependencies {
+        optional.project 'fabric-api'
+    }
+
+	uploadFile = remapJar
 }
 
 // configure the maven publication
