--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ modrinth {
 
     versionName = "Still Clouds ${project.version}"
     versionType = System.env.MODRINTH_VERSION_TYPE ?: 'release'
-    versionNumber = "project.version+${System.env.MODRINTH_VERSION_METADATA}"
+    versionNumber = "project.version${System.env.MODRINTH_VERSION_METADATA}"
 
     changelog = System.env.MODRINTH_CHANGELOG ?: ''
     dependencies {
