--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -7,7 +7,7 @@ inputs:
     required: false
     default: ''
   version_type:
-    description: Version type
+    description: Version typee
     required: false
     default: release
   changelog:
@@ -18,9 +18,10 @@ runs:
   using: composite
   steps:
     - name: Build
-      uses: ./.github/actions/build
+      uses: .github/actions/build
     - name: Upload to Modrinth
       run: ./gradlew modrinth
+      shell: bash
       env:
         MODRINTH_CHANGELOG: ${{ inputs.changelog }}
         MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
